--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -12,4 +12,4 @@ spring.h2.console.enabled=true
 spring.h2.console.path=/h2-console
 
 
-spring.data.rest.base-path=/api
+# spring.data.rest.base-path=/api
