--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -11,5 +11,14 @@ spring.jpa.database-platform=org.hibernate.dialect.H2Dialect
 spring.h2.console.enabled=true
 spring.h2.console.path=/h2-console
 
+# spring.datasource.url=jdbc:mysql://localhost:3306/your_database_name
+# spring.datasource.username=root
+# spring.datasource.password=your_password
+# spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
+
+# # Optional but recommended
+# spring.jpa.hibernate.ddl-auto=update
+# spring.jpa.show-sql=true
+
 
 # spring.data.rest.base-path=/api
