add spring security & customize it

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -22,3 +22,7 @@ spring.h2.console.path=/h2-console
 
 
 # spring.data.rest.base-path=/api
+
+
+spring.security.user.name=admin
+spring.security.user.password=12345
