--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,28 +1,26 @@
 spring.application.name=ecommerce
 
 ##### Use in-memory H2 database (resets on restart)
-spring.datasource.url=jdbc:h2:mem:testdb
-spring.datasource.driver-class-name=org.h2.Driver
-spring.datasource.username=admin
-spring.datasource.password=admin
-spring.jpa.database-platform=org.hibernate.dialect.H2Dialect
+# spring.datasource.url=jdbc:h2:mem:testdb
+# spring.datasource.driver-class-name=org.h2.Driver
+# spring.datasource.username=admin
+# spring.datasource.password=admin
+# spring.jpa.database-platform=org.hibernate.dialect.H2Dialect
 
-### Enable H2 Console
-spring.h2.console.enabled=true
-spring.h2.console.path=/h2-console
+# ### Enable H2 Console
+# spring.h2.console.enabled=true
+# spring.h2.console.path=/h2-console
 
-# spring.datasource.url=jdbc:mysql://localhost:3306/your_database_name
-# spring.datasource.username=root
-# spring.datasource.password=your_password
-# spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
+spring.datasource.url=jdbc:mysql://localhost:3306/springAmazonDb
+spring.datasource.username=root
+spring.datasource.password=omar2002
+spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 
-# # Optional but recommended
-# spring.jpa.hibernate.ddl-auto=update
-# spring.jpa.show-sql=true
+# Optional but recommended
+spring.jpa.hibernate.ddl-auto=update
+spring.jpa.show-sql=true
 
 
 # spring.data.rest.base-path=/api
-
-
 spring.security.user.name=admin
 spring.security.user.password=12345
