use bcrypt password encoder & add user controller

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -24,3 +24,9 @@ spring.jpa.show-sql=true
 # spring.data.rest.base-path=/api
 spring.security.user.name=admin
 spring.security.user.password=12345
+
+
+#----- to use database from terminal-----
+# mysql> USE springAmazonDb;
+# mysql> show tables;
+# mysql> select * from users;
