add user AuthenticationManager

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -23,7 +23,8 @@ spring.jpa.show-sql=true
 
 # spring.data.rest.base-path=/api
 spring.security.user.name=admin
-spring.security.user.password=12345
+spring.security.user.password=12345omarshahd
+
 
 
 #----- to use database from terminal-----
