--- a/pom.xml
+++ b/pom.xml
@@ -36,7 +36,7 @@
 			<artifactId>spring-boot-starter-security</artifactId>
 		</dependency>
 
-		<!-- JWT (JJWT) from io.jsonwebtoken -->
+		<!-- 	 (JJWT) from io.jsonwebtoken -->
 		<dependency>
 			<groupId>io.jsonwebtoken</groupId>
 			<artifactId>jjwt-api</artifactId>
