--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -18,7 +18,7 @@ spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 
 # Optional but recommended
 spring.jpa.hibernate.ddl-auto=update
-spring.jpa.show-sql=true
+# spring.jpa.show-sql=true
 
 
 # spring.data.rest.base-path=/api
@@ -26,6 +26,7 @@ spring.security.user.name=admin
 spring.security.user.password=12345omarshahd
 
 
+jwt.secret=U3ByaW5nQm9vdFVzZXJTZWNyZXRLZXlWYWx1ZTEyMzQ1Ng==
 
 #----- to use database from terminal-----
 # mysql> USE springAmazonDb;
