--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -32,3 +32,9 @@ jwt.secret=U3ByaW5nQm9vdFVzZXJTZWNyZXRLZXlWYWx1ZTEyMzQ1Ng==
 # mysql> USE springAmazonDb;
 # mysql> show tables;
 # mysql> select * from users;
+
+#----- Rabbit MQ Config-----
+spring.rabbitmq.host=localhost
+spring.rabbitmq.port=5672
+spring.rabbitmq.username=guest
+spring.rabbitmq.password=guest
